--- a/Game28/index.html
+++ b/Game28/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Game</title>
+        <title>Last Game</title>
     </head>
 
     <body style="background-color: rebeccapurple;">
